[package]
name = "int_like"
version = "0.1.0"
edition = "2021"
authors = ["fslongjin <fslongjin@vip.qq.com>"]
license = "MIT"
description = "A Rust macro for defining integer-backed opaque types safely"
repository = "https://github.com/fslongjin/int_like"
homepage = "https://github.com/fslongjin/int_like"
readme = "README.md"
keywords = ["macro", "int", "wrapper", "type-safety", "atomic"]
categories = ["data-structures", "no-std", "rust-patterns"]

[dependencies]
